tests/fail/expr/forloop.rs
fn main() {
    one_assert::assert!(for _ in 0..10 {});
}
